--- a/ansible/group_vars/all/vars.yml
+++ b/ansible/group_vars/all/vars.yml
@@ -3,7 +3,8 @@
 time_server: 192.168.179.1
 rhel8cis_rule_1_1_1_3: false  # UDF file systems module required on Azure
 rhel8cis_rule_1_2_1: false  # GPG Keys were re-newed, signer has expired.
-rhel8cis_rule_1_9:  # do not update ansible in the packer run
+rhel8cis_rule_1_9: false # do not update ansible in the packer run
+rhel8cis_rule_5_2_2_3: false # do not disable the system
 rhel8cis_rule_5_3_4: false
 rhel8cis_ssh_loglevel: VERBOSE
 rhel8cis_remote_log_server: loghost
