--- a/ansible/group_vars/all/vars.yml
+++ b/ansible/group_vars/all/vars.yml
@@ -9,9 +9,11 @@ rhel8cis_remote_log_server: loghost
 rhel8cis_allowed_crypto_policies: FIPS
 rhel8cis_crypto_policy: FIPS
 rhel8cis_auditd:
-  space_left_action: EMAIL
+  disk_error_action: syslog
+  disk_full_action: rotate
   action_mail_acct: root
-  admin_space_left_action: HALT
+  space_left_action: rotate
+  admin_space_left_action: syslog
   max_log_file_action: rotate
 allow_auditd_uid_user_exclusions: true
 rhel8cis_auditd_uid_exclude:
